// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the expense summary correctly with more than one expense 1`] = `
<h1>
  Viewing 
  23
   
  expenses
   
  totalling 
  $23,544.32
</h1>
`;

exports[`should render the expense summary correctly with one expense 1`] = `
<h1>
  Viewing 
  1
   
  expense
   
  totalling 
  $2.35
</h1>
`;
